--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("/css/terminal.css");
 @import url("/css/compass.css");
-@import url("/css/player-data.css");
+@import url("/css/down-container.css");
 
 @font-face{
     font-family: atari;
