drop command added etc

--- a/css/down-container.css
+++ b/css/down-container.css
@@ -24,6 +24,7 @@
 .direction-container, .sight-container, .carried-container{
     display: flex;
     flex-direction: row;
+    width: 1000px;
 }
 
 .sight-container{
